Tercera entrega/Version 1/y.output
Gramática

    0 $accept: start $end

    1 start: programa
    2      | /* vacío */

    3 programa: START seccion_declaracion bloque END
    4         | START bloque END

    5 seccion_declaracion: DEFVAR bloque_dec ENDDEF

    6 bloque_dec: bloque_dec declaracion
    7           | declaracion

    8 declaracion: t_dato DOS_PUNTOS lista_id

    9 t_dato: FLOAT
   10       | INT
   11       | STRING

   12 lista_id: lista_id PUNTO_COMA ID
   13         | ID

   14 bloque: bloque sentencia
   15       | sentencia

   16 sentencia: asignacion
   17          | bloque_if
   18          | bloque_while
   19          | lectura
   20          | escritura

   21 $@1: /* vacío */

   22 asignacion: ID ASIG $@1 expresion_aritmetica

   23 $@2: /* vacío */

   24 $@3: /* vacío */

   25 bloque_while: WHILE $@2 expresion_logica $@3 THEN bloque ENDWHILE

   26 $@4: /* vacío */

   27 bloque_if: IF expresion_logica $@4 THEN decision_bloque ENDIF

   28 decision_bloque: bloque

   29 $@5: /* vacío */

   30 decision_bloque: bloque $@5 ELSE bloque

   31 expresion_logica: termino_logico

   32 $@6: /* vacío */

   33 expresion_logica: termino_logico $@6 AND termino_logico

   34 $@7: /* vacío */

   35 expresion_logica: termino_logico $@7 OR termino_logico

   36 $@8: /* vacío */

   37 termino_logico: expresion_aritmetica $@8 MENOR expresion_aritmetica

   38 $@9: /* vacío */

   39 termino_logico: expresion_aritmetica $@9 MENOR_IGUAL expresion_aritmetica

   40 $@10: /* vacío */

   41 termino_logico: expresion_aritmetica $@10 MAYOR expresion_aritmetica

   42 $@11: /* vacío */

   43 termino_logico: expresion_aritmetica $@11 MAYOR_IGUAL expresion_aritmetica

   44 $@12: /* vacío */

   45 termino_logico: expresion_aritmetica $@12 IGUAL expresion_aritmetica

   46 $@13: /* vacío */

   47 termino_logico: expresion_aritmetica $@13 DISTINTO expresion_aritmetica

   48 $@14: /* vacío */

   49 termino_logico: NOT expresion_aritmetica $@14 MENOR expresion_aritmetica

   50 $@15: /* vacío */

   51 termino_logico: NOT expresion_aritmetica $@15 MENOR_IGUAL expresion_aritmetica

   52 $@16: /* vacío */

   53 termino_logico: NOT expresion_aritmetica $@16 MAYOR expresion_aritmetica

   54 $@17: /* vacío */

   55 termino_logico: NOT expresion_aritmetica $@17 MAYOR_IGUAL expresion_aritmetica

   56 $@18: /* vacío */

   57 termino_logico: NOT expresion_aritmetica $@18 IGUAL expresion_aritmetica

   58 $@19: /* vacío */

   59 termino_logico: NOT expresion_aritmetica $@19 DISTINTO expresion_aritmetica

   60 comp_aritmetico: SUMA
   61                | RESTA
   62                | POR
   63                | DIVIDIDO

   64 long: LONG PA CA lista_exp_coma CC PC
   65     | LONG PA CA CC PC

   66 take: TAKE PA comp_aritmetico PUNTO_COMA CTE_INT PUNTO_COMA CA lista_exp_punto_coma CC PC
   67     | TAKE PA comp_aritmetico PUNTO_COMA CTE_INT PUNTO_COMA CA CC PC

   68 lista_exp_coma: lista_exp_coma COMA expresion_aritmetica
   69               | expresion_aritmetica

   70 lista_exp_punto_coma: lista_exp_punto_coma PUNTO_COMA expresion_aritmetica
   71                     | expresion_aritmetica

   72 expresion_aritmetica: expresion_aritmetica SUMA termino
   73                     | expresion_aritmetica RESTA termino
   74                     | termino

   75 termino: termino POR factor
   76        | termino DIVIDIDO factor
   77        | factor

   78 factor: ID
   79       | constante

   80 $@20: /* vacío */

   81 factor: PA $@20 expresion_aritmetica PC
   82       | long
   83       | take

   84 constante: CTE_INT
   85          | CTE_STRING
   86          | CTE_FLOAT

   87 lectura: GET ID

   88 escritura: DISPLAY CTE_STRING
   89          | DISPLAY ID


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
START (258) 3 4
END (259) 3 4
DEFVAR (260) 5
ENDDEF (261) 5
INT (262) 10
FLOAT (263) 9
STRING (264) 11
WHILE (265) 25
ENDWHILE (266) 25
IF (267) 27
THEN (268) 25 27
ELSE (269) 30
ENDIF (270) 27
AND (271) 33
OR (272) 35
NOT (273) 49 51 53 55 57 59
ASIG (274) 22
SUMA (275) 60 72
RESTA (276) 61 73
POR (277) 62 75
DIVIDIDO (278) 63 76
MENOR (279) 37 49
MAYOR (280) 41 53
MENOR_IGUAL (281) 39 51
MAYOR_IGUAL (282) 43 55
IGUAL (283) 45 57
DISTINTO (284) 47 59
PA (285) 64 65 66 67 81
PC (286) 64 65 66 67 81
CA (287) 64 65 66 67
CC (288) 64 65 66 67
COMA (289) 68
PUNTO_COMA (290) 12 66 67 70
DOS_PUNTOS (291) 8
GET (292) 87
DISPLAY (293) 88 89
LONG (294) 64 65
TAKE (295) 66 67
ID (296) 12 13 22 78 87 89
CTE_FLOAT (297) 86
CTE_INT (298) 66 67 84
CTE_STRING (299) 85 88


No terminales con las reglas donde aparecen

$accept (45)
    en la izquierda: 0
start (46)
    en la izquierda: 1 2, en la derecha: 0
programa (47)
    en la izquierda: 3 4, en la derecha: 1
seccion_declaracion (48)
    en la izquierda: 5, en la derecha: 3
bloque_dec (49)
    en la izquierda: 6 7, en la derecha: 5 6
declaracion (50)
    en la izquierda: 8, en la derecha: 6 7
t_dato (51)
    en la izquierda: 9 10 11, en la derecha: 8
lista_id (52)
    en la izquierda: 12 13, en la derecha: 8 12
bloque (53)
    en la izquierda: 14 15, en la derecha: 3 4 14 25 28 30
sentencia (54)
    en la izquierda: 16 17 18 19 20, en la derecha: 14 15
asignacion (55)
    en la izquierda: 22, en la derecha: 16
$@1 (56)
    en la izquierda: 21, en la derecha: 22
bloque_while (57)
    en la izquierda: 25, en la derecha: 18
$@2 (58)
    en la izquierda: 23, en la derecha: 25
$@3 (59)
    en la izquierda: 24, en la derecha: 25
bloque_if (60)
    en la izquierda: 27, en la derecha: 17
$@4 (61)
    en la izquierda: 26, en la derecha: 27
decision_bloque (62)
    en la izquierda: 28 30, en la derecha: 27
$@5 (63)
    en la izquierda: 29, en la derecha: 30
expresion_logica (64)
    en la izquierda: 31 33 35, en la derecha: 25 27
$@6 (65)
    en la izquierda: 32, en la derecha: 33
$@7 (66)
    en la izquierda: 34, en la derecha: 35
termino_logico (67)
    en la izquierda: 37 39 41 43 45 47 49 51 53 55 57 59, en la derecha:
    31 33 35
$@8 (68)
    en la izquierda: 36, en la derecha: 37
$@9 (69)
    en la izquierda: 38, en la derecha: 39
$@10 (70)
    en la izquierda: 40, en la derecha: 41
$@11 (71)
    en la izquierda: 42, en la derecha: 43
$@12 (72)
    en la izquierda: 44, en la derecha: 45
$@13 (73)
    en la izquierda: 46, en la derecha: 47
$@14 (74)
    en la izquierda: 48, en la derecha: 49
$@15 (75)
    en la izquierda: 50, en la derecha: 51
$@16 (76)
    en la izquierda: 52, en la derecha: 53
$@17 (77)
    en la izquierda: 54, en la derecha: 55
$@18 (78)
    en la izquierda: 56, en la derecha: 57
$@19 (79)
    en la izquierda: 58, en la derecha: 59
comp_aritmetico (80)
    en la izquierda: 60 61 62 63, en la derecha: 66 67
long (81)
    en la izquierda: 64 65, en la derecha: 82
take (82)
    en la izquierda: 66 67, en la derecha: 83
lista_exp_coma (83)
    en la izquierda: 68 69, en la derecha: 64 68
lista_exp_punto_coma (84)
    en la izquierda: 70 71, en la derecha: 66 70
expresion_aritmetica (85)
    en la izquierda: 72 73 74, en la derecha: 22 37 39 41 43 45 47
    49 51 53 55 57 59 68 69 70 71 72 73 81
termino (86)
    en la izquierda: 75 76 77, en la derecha: 72 73 74 75 76
factor (87)
    en la izquierda: 78 79 81 82 83, en la derecha: 75 76 77
$@20 (88)
    en la izquierda: 80, en la derecha: 81
constante (89)
    en la izquierda: 84 85 86, en la derecha: 79
lectura (90)
    en la izquierda: 87, en la derecha: 19
escritura (91)
    en la izquierda: 88 89, en la derecha: 20


estado 0

    0 $accept: . start $end

    START  desplazar e ir al estado 1

    $default  reduce usando la regla 2 (start)

    start     ir al estado 2
    programa  ir al estado 3


estado 1

    3 programa: START . seccion_declaracion bloque END
    4         | START . bloque END

    DEFVAR   desplazar e ir al estado 4
    WHILE    desplazar e ir al estado 5
    IF       desplazar e ir al estado 6
    GET      desplazar e ir al estado 7
    DISPLAY  desplazar e ir al estado 8
    ID       desplazar e ir al estado 9

    seccion_declaracion  ir al estado 10
    bloque               ir al estado 11
    sentencia            ir al estado 12
    asignacion           ir al estado 13
    bloque_while         ir al estado 14
    bloque_if            ir al estado 15
    lectura              ir al estado 16
    escritura            ir al estado 17


estado 2

    0 $accept: start . $end

    $end  desplazar e ir al estado 18


estado 3

    1 start: programa .

    $default  reduce usando la regla 1 (start)


estado 4

    5 seccion_declaracion: DEFVAR . bloque_dec ENDDEF

    INT     desplazar e ir al estado 19
    FLOAT   desplazar e ir al estado 20
    STRING  desplazar e ir al estado 21

    bloque_dec   ir al estado 22
    declaracion  ir al estado 23
    t_dato       ir al estado 24


estado 5

   25 bloque_while: WHILE . $@2 expresion_logica $@3 THEN bloque ENDWHILE

    $default  reduce usando la regla 23 ($@2)

    $@2  ir al estado 25


estado 6

   27 bloque_if: IF . expresion_logica $@4 THEN decision_bloque ENDIF

    NOT         desplazar e ir al estado 26
    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    expresion_logica      ir al estado 34
    termino_logico        ir al estado 35
    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 38
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 7

   87 lectura: GET . ID

    ID  desplazar e ir al estado 42


estado 8

   88 escritura: DISPLAY . CTE_STRING
   89          | DISPLAY . ID

    ID          desplazar e ir al estado 43
    CTE_STRING  desplazar e ir al estado 44


estado 9

   22 asignacion: ID . ASIG $@1 expresion_aritmetica

    ASIG  desplazar e ir al estado 45


estado 10

    3 programa: START seccion_declaracion . bloque END

    WHILE    desplazar e ir al estado 5
    IF       desplazar e ir al estado 6
    GET      desplazar e ir al estado 7
    DISPLAY  desplazar e ir al estado 8
    ID       desplazar e ir al estado 9

    bloque        ir al estado 46
    sentencia     ir al estado 12
    asignacion    ir al estado 13
    bloque_while  ir al estado 14
    bloque_if     ir al estado 15
    lectura       ir al estado 16
    escritura     ir al estado 17


estado 11

    4 programa: START bloque . END
   14 bloque: bloque . sentencia

    END      desplazar e ir al estado 47
    WHILE    desplazar e ir al estado 5
    IF       desplazar e ir al estado 6
    GET      desplazar e ir al estado 7
    DISPLAY  desplazar e ir al estado 8
    ID       desplazar e ir al estado 9

    sentencia     ir al estado 48
    asignacion    ir al estado 13
    bloque_while  ir al estado 14
    bloque_if     ir al estado 15
    lectura       ir al estado 16
    escritura     ir al estado 17


estado 12

   15 bloque: sentencia .

    $default  reduce usando la regla 15 (bloque)


estado 13

   16 sentencia: asignacion .

    $default  reduce usando la regla 16 (sentencia)


estado 14

   18 sentencia: bloque_while .

    $default  reduce usando la regla 18 (sentencia)


estado 15

   17 sentencia: bloque_if .

    $default  reduce usando la regla 17 (sentencia)


estado 16

   19 sentencia: lectura .

    $default  reduce usando la regla 19 (sentencia)


estado 17

   20 sentencia: escritura .

    $default  reduce usando la regla 20 (sentencia)


estado 18

    0 $accept: start $end .

    $default  aceptar


estado 19

   10 t_dato: INT .

    $default  reduce usando la regla 10 (t_dato)


estado 20

    9 t_dato: FLOAT .

    $default  reduce usando la regla 9 (t_dato)


estado 21

   11 t_dato: STRING .

    $default  reduce usando la regla 11 (t_dato)


estado 22

    5 seccion_declaracion: DEFVAR bloque_dec . ENDDEF
    6 bloque_dec: bloque_dec . declaracion

    ENDDEF  desplazar e ir al estado 49
    INT     desplazar e ir al estado 19
    FLOAT   desplazar e ir al estado 20
    STRING  desplazar e ir al estado 21

    declaracion  ir al estado 50
    t_dato       ir al estado 24


estado 23

    7 bloque_dec: declaracion .

    $default  reduce usando la regla 7 (bloque_dec)


estado 24

    8 declaracion: t_dato . DOS_PUNTOS lista_id

    DOS_PUNTOS  desplazar e ir al estado 51


estado 25

   25 bloque_while: WHILE $@2 . expresion_logica $@3 THEN bloque ENDWHILE

    NOT         desplazar e ir al estado 26
    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    expresion_logica      ir al estado 52
    termino_logico        ir al estado 35
    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 38
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 26

   49 termino_logico: NOT . expresion_aritmetica $@14 MENOR expresion_aritmetica
   51               | NOT . expresion_aritmetica $@15 MENOR_IGUAL expresion_aritmetica
   53               | NOT . expresion_aritmetica $@16 MAYOR expresion_aritmetica
   55               | NOT . expresion_aritmetica $@17 MAYOR_IGUAL expresion_aritmetica
   57               | NOT . expresion_aritmetica $@18 IGUAL expresion_aritmetica
   59               | NOT . expresion_aritmetica $@19 DISTINTO expresion_aritmetica

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 53
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 27

   81 factor: PA . $@20 expresion_aritmetica PC

    $default  reduce usando la regla 80 ($@20)

    $@20  ir al estado 54


estado 28

   64 long: LONG . PA CA lista_exp_coma CC PC
   65     | LONG . PA CA CC PC

    PA  desplazar e ir al estado 55


estado 29

   66 take: TAKE . PA comp_aritmetico PUNTO_COMA CTE_INT PUNTO_COMA CA lista_exp_punto_coma CC PC
   67     | TAKE . PA comp_aritmetico PUNTO_COMA CTE_INT PUNTO_COMA CA CC PC

    PA  desplazar e ir al estado 56


estado 30

   78 factor: ID .

    $default  reduce usando la regla 78 (factor)


estado 31

   86 constante: CTE_FLOAT .

    $default  reduce usando la regla 86 (constante)


estado 32

   84 constante: CTE_INT .

    $default  reduce usando la regla 84 (constante)


estado 33

   85 constante: CTE_STRING .

    $default  reduce usando la regla 85 (constante)


estado 34

   27 bloque_if: IF expresion_logica . $@4 THEN decision_bloque ENDIF

    $default  reduce usando la regla 26 ($@4)

    $@4  ir al estado 57


estado 35

   31 expresion_logica: termino_logico .
   33                 | termino_logico . $@6 AND termino_logico
   35                 | termino_logico . $@7 OR termino_logico

    AND       reduce usando la regla 32 ($@6)
    OR        reduce usando la regla 34 ($@7)
    $default  reduce usando la regla 31 (expresion_logica)

    $@6  ir al estado 58
    $@7  ir al estado 59


estado 36

   82 factor: long .

    $default  reduce usando la regla 82 (factor)


estado 37

   83 factor: take .

    $default  reduce usando la regla 83 (factor)


estado 38

   37 termino_logico: expresion_aritmetica . $@8 MENOR expresion_aritmetica
   39               | expresion_aritmetica . $@9 MENOR_IGUAL expresion_aritmetica
   41               | expresion_aritmetica . $@10 MAYOR expresion_aritmetica
   43               | expresion_aritmetica . $@11 MAYOR_IGUAL expresion_aritmetica
   45               | expresion_aritmetica . $@12 IGUAL expresion_aritmetica
   47               | expresion_aritmetica . $@13 DISTINTO expresion_aritmetica
   72 expresion_aritmetica: expresion_aritmetica . SUMA termino
   73                     | expresion_aritmetica . RESTA termino

    SUMA   desplazar e ir al estado 60
    RESTA  desplazar e ir al estado 61

    MAYOR        reduce usando la regla 40 ($@10)
    MENOR_IGUAL  reduce usando la regla 38 ($@9)
    MAYOR_IGUAL  reduce usando la regla 42 ($@11)
    IGUAL        reduce usando la regla 44 ($@12)
    DISTINTO     reduce usando la regla 46 ($@13)
    $default     reduce usando la regla 36 ($@8)

    $@8   ir al estado 62
    $@9   ir al estado 63
    $@10  ir al estado 64
    $@11  ir al estado 65
    $@12  ir al estado 66
    $@13  ir al estado 67


estado 39

   74 expresion_aritmetica: termino .
   75 termino: termino . POR factor
   76        | termino . DIVIDIDO factor

    POR       desplazar e ir al estado 68
    DIVIDIDO  desplazar e ir al estado 69

    $default  reduce usando la regla 74 (expresion_aritmetica)


estado 40

   77 termino: factor .

    $default  reduce usando la regla 77 (termino)


estado 41

   79 factor: constante .

    $default  reduce usando la regla 79 (factor)


estado 42

   87 lectura: GET ID .

    $default  reduce usando la regla 87 (lectura)


estado 43

   89 escritura: DISPLAY ID .

    $default  reduce usando la regla 89 (escritura)


estado 44

   88 escritura: DISPLAY CTE_STRING .

    $default  reduce usando la regla 88 (escritura)


estado 45

   22 asignacion: ID ASIG . $@1 expresion_aritmetica

    $default  reduce usando la regla 21 ($@1)

    $@1  ir al estado 70


estado 46

    3 programa: START seccion_declaracion bloque . END
   14 bloque: bloque . sentencia

    END      desplazar e ir al estado 71
    WHILE    desplazar e ir al estado 5
    IF       desplazar e ir al estado 6
    GET      desplazar e ir al estado 7
    DISPLAY  desplazar e ir al estado 8
    ID       desplazar e ir al estado 9

    sentencia     ir al estado 48
    asignacion    ir al estado 13
    bloque_while  ir al estado 14
    bloque_if     ir al estado 15
    lectura       ir al estado 16
    escritura     ir al estado 17


estado 47

    4 programa: START bloque END .

    $default  reduce usando la regla 4 (programa)


estado 48

   14 bloque: bloque sentencia .

    $default  reduce usando la regla 14 (bloque)


estado 49

    5 seccion_declaracion: DEFVAR bloque_dec ENDDEF .

    $default  reduce usando la regla 5 (seccion_declaracion)


estado 50

    6 bloque_dec: bloque_dec declaracion .

    $default  reduce usando la regla 6 (bloque_dec)


estado 51

    8 declaracion: t_dato DOS_PUNTOS . lista_id

    ID  desplazar e ir al estado 72

    lista_id  ir al estado 73


estado 52

   25 bloque_while: WHILE $@2 expresion_logica . $@3 THEN bloque ENDWHILE

    $default  reduce usando la regla 24 ($@3)

    $@3  ir al estado 74


estado 53

   49 termino_logico: NOT expresion_aritmetica . $@14 MENOR expresion_aritmetica
   51               | NOT expresion_aritmetica . $@15 MENOR_IGUAL expresion_aritmetica
   53               | NOT expresion_aritmetica . $@16 MAYOR expresion_aritmetica
   55               | NOT expresion_aritmetica . $@17 MAYOR_IGUAL expresion_aritmetica
   57               | NOT expresion_aritmetica . $@18 IGUAL expresion_aritmetica
   59               | NOT expresion_aritmetica . $@19 DISTINTO expresion_aritmetica
   72 expresion_aritmetica: expresion_aritmetica . SUMA termino
   73                     | expresion_aritmetica . RESTA termino

    SUMA   desplazar e ir al estado 60
    RESTA  desplazar e ir al estado 61

    MAYOR        reduce usando la regla 52 ($@16)
    MENOR_IGUAL  reduce usando la regla 50 ($@15)
    MAYOR_IGUAL  reduce usando la regla 54 ($@17)
    IGUAL        reduce usando la regla 56 ($@18)
    DISTINTO     reduce usando la regla 58 ($@19)
    $default     reduce usando la regla 48 ($@14)

    $@14  ir al estado 75
    $@15  ir al estado 76
    $@16  ir al estado 77
    $@17  ir al estado 78
    $@18  ir al estado 79
    $@19  ir al estado 80


estado 54

   81 factor: PA $@20 . expresion_aritmetica PC

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 81
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 55

   64 long: LONG PA . CA lista_exp_coma CC PC
   65     | LONG PA . CA CC PC

    CA  desplazar e ir al estado 82


estado 56

   66 take: TAKE PA . comp_aritmetico PUNTO_COMA CTE_INT PUNTO_COMA CA lista_exp_punto_coma CC PC
   67     | TAKE PA . comp_aritmetico PUNTO_COMA CTE_INT PUNTO_COMA CA CC PC

    SUMA      desplazar e ir al estado 83
    RESTA     desplazar e ir al estado 84
    POR       desplazar e ir al estado 85
    DIVIDIDO  desplazar e ir al estado 86

    comp_aritmetico  ir al estado 87


estado 57

   27 bloque_if: IF expresion_logica $@4 . THEN decision_bloque ENDIF

    THEN  desplazar e ir al estado 88


estado 58

   33 expresion_logica: termino_logico $@6 . AND termino_logico

    AND  desplazar e ir al estado 89


estado 59

   35 expresion_logica: termino_logico $@7 . OR termino_logico

    OR  desplazar e ir al estado 90


estado 60

   72 expresion_aritmetica: expresion_aritmetica SUMA . termino

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long       ir al estado 36
    take       ir al estado 37
    termino    ir al estado 91
    factor     ir al estado 40
    constante  ir al estado 41


estado 61

   73 expresion_aritmetica: expresion_aritmetica RESTA . termino

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long       ir al estado 36
    take       ir al estado 37
    termino    ir al estado 92
    factor     ir al estado 40
    constante  ir al estado 41


estado 62

   37 termino_logico: expresion_aritmetica $@8 . MENOR expresion_aritmetica

    MENOR  desplazar e ir al estado 93


estado 63

   39 termino_logico: expresion_aritmetica $@9 . MENOR_IGUAL expresion_aritmetica

    MENOR_IGUAL  desplazar e ir al estado 94


estado 64

   41 termino_logico: expresion_aritmetica $@10 . MAYOR expresion_aritmetica

    MAYOR  desplazar e ir al estado 95


estado 65

   43 termino_logico: expresion_aritmetica $@11 . MAYOR_IGUAL expresion_aritmetica

    MAYOR_IGUAL  desplazar e ir al estado 96


estado 66

   45 termino_logico: expresion_aritmetica $@12 . IGUAL expresion_aritmetica

    IGUAL  desplazar e ir al estado 97


estado 67

   47 termino_logico: expresion_aritmetica $@13 . DISTINTO expresion_aritmetica

    DISTINTO  desplazar e ir al estado 98


estado 68

   75 termino: termino POR . factor

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long       ir al estado 36
    take       ir al estado 37
    factor     ir al estado 99
    constante  ir al estado 41


estado 69

   76 termino: termino DIVIDIDO . factor

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long       ir al estado 36
    take       ir al estado 37
    factor     ir al estado 100
    constante  ir al estado 41


estado 70

   22 asignacion: ID ASIG $@1 . expresion_aritmetica

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 101
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 71

    3 programa: START seccion_declaracion bloque END .

    $default  reduce usando la regla 3 (programa)


estado 72

   13 lista_id: ID .

    $default  reduce usando la regla 13 (lista_id)


estado 73

    8 declaracion: t_dato DOS_PUNTOS lista_id .
   12 lista_id: lista_id . PUNTO_COMA ID

    PUNTO_COMA  desplazar e ir al estado 102

    $default  reduce usando la regla 8 (declaracion)


estado 74

   25 bloque_while: WHILE $@2 expresion_logica $@3 . THEN bloque ENDWHILE

    THEN  desplazar e ir al estado 103


estado 75

   49 termino_logico: NOT expresion_aritmetica $@14 . MENOR expresion_aritmetica

    MENOR  desplazar e ir al estado 104


estado 76

   51 termino_logico: NOT expresion_aritmetica $@15 . MENOR_IGUAL expresion_aritmetica

    MENOR_IGUAL  desplazar e ir al estado 105


estado 77

   53 termino_logico: NOT expresion_aritmetica $@16 . MAYOR expresion_aritmetica

    MAYOR  desplazar e ir al estado 106


estado 78

   55 termino_logico: NOT expresion_aritmetica $@17 . MAYOR_IGUAL expresion_aritmetica

    MAYOR_IGUAL  desplazar e ir al estado 107


estado 79

   57 termino_logico: NOT expresion_aritmetica $@18 . IGUAL expresion_aritmetica

    IGUAL  desplazar e ir al estado 108


estado 80

   59 termino_logico: NOT expresion_aritmetica $@19 . DISTINTO expresion_aritmetica

    DISTINTO  desplazar e ir al estado 109


estado 81

   72 expresion_aritmetica: expresion_aritmetica . SUMA termino
   73                     | expresion_aritmetica . RESTA termino
   81 factor: PA $@20 expresion_aritmetica . PC

    SUMA   desplazar e ir al estado 60
    RESTA  desplazar e ir al estado 61
    PC     desplazar e ir al estado 110


estado 82

   64 long: LONG PA CA . lista_exp_coma CC PC
   65     | LONG PA CA . CC PC

    PA          desplazar e ir al estado 27
    CC          desplazar e ir al estado 111
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long                  ir al estado 36
    take                  ir al estado 37
    lista_exp_coma        ir al estado 112
    expresion_aritmetica  ir al estado 113
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 83

   60 comp_aritmetico: SUMA .

    $default  reduce usando la regla 60 (comp_aritmetico)


estado 84

   61 comp_aritmetico: RESTA .

    $default  reduce usando la regla 61 (comp_aritmetico)


estado 85

   62 comp_aritmetico: POR .

    $default  reduce usando la regla 62 (comp_aritmetico)


estado 86

   63 comp_aritmetico: DIVIDIDO .

    $default  reduce usando la regla 63 (comp_aritmetico)


estado 87

   66 take: TAKE PA comp_aritmetico . PUNTO_COMA CTE_INT PUNTO_COMA CA lista_exp_punto_coma CC PC
   67     | TAKE PA comp_aritmetico . PUNTO_COMA CTE_INT PUNTO_COMA CA CC PC

    PUNTO_COMA  desplazar e ir al estado 114


estado 88

   27 bloque_if: IF expresion_logica $@4 THEN . decision_bloque ENDIF

    WHILE    desplazar e ir al estado 5
    IF       desplazar e ir al estado 6
    GET      desplazar e ir al estado 7
    DISPLAY  desplazar e ir al estado 8
    ID       desplazar e ir al estado 9

    bloque           ir al estado 115
    sentencia        ir al estado 12
    asignacion       ir al estado 13
    bloque_while     ir al estado 14
    bloque_if        ir al estado 15
    decision_bloque  ir al estado 116
    lectura          ir al estado 16
    escritura        ir al estado 17


estado 89

   33 expresion_logica: termino_logico $@6 AND . termino_logico

    NOT         desplazar e ir al estado 26
    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    termino_logico        ir al estado 117
    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 38
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 90

   35 expresion_logica: termino_logico $@7 OR . termino_logico

    NOT         desplazar e ir al estado 26
    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    termino_logico        ir al estado 118
    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 38
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 91

   72 expresion_aritmetica: expresion_aritmetica SUMA termino .
   75 termino: termino . POR factor
   76        | termino . DIVIDIDO factor

    POR       desplazar e ir al estado 68
    DIVIDIDO  desplazar e ir al estado 69

    $default  reduce usando la regla 72 (expresion_aritmetica)


estado 92

   73 expresion_aritmetica: expresion_aritmetica RESTA termino .
   75 termino: termino . POR factor
   76        | termino . DIVIDIDO factor

    POR       desplazar e ir al estado 68
    DIVIDIDO  desplazar e ir al estado 69

    $default  reduce usando la regla 73 (expresion_aritmetica)


estado 93

   37 termino_logico: expresion_aritmetica $@8 MENOR . expresion_aritmetica

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 119
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 94

   39 termino_logico: expresion_aritmetica $@9 MENOR_IGUAL . expresion_aritmetica

    PA          desplazar e ir al estado 27
    LONG        desplazar e ir al estado 28
    TAKE        desplazar e ir al estado 29
    ID          desplazar e ir al estado 30
    CTE_FLOAT   desplazar e ir al estado 31
    CTE_INT     desplazar e ir al estado 32
    CTE_STRING  desplazar e ir al estado 33

    long                  ir al estado 36
    take                  ir al estado 37
    expresion_aritmetica  ir al estado 120
    termino               ir al estado 39
    factor                ir al estado 40
    constante             ir al estado 41


estado 95

   41 termino_logico: expresion_aritmetica $@10 MAYOR . expresion_aritmetica
